Changelog
=========

0.3 (unreleased)
----------------

- don't accumulate old comments

0.2 (2010-05-22)
----------------

- added a verbose option to print old versions as well
- updated metadata, doc and license

0.1 (2010-05-16)
----------------

- Initial release